fix: add gap on hero

--- a/perso.css
+++ b/perso.css
@@ -38,11 +38,10 @@ a {
     justify-content: space-between;
     align-items: center;
     margin-block: 50px;
-}
 
-@media (max-width: 1200px) {
-    .hero {
+    @media (max-width: 1200px) {
         flex-direction: column;
+        gap: 50px;
         justify-content: center;
     }
 }
